--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,11 @@ gunicorn==20.1.0
 itsdangerous==1.1.0
 jinja2==2.11.2
 markupsafe==1.1.1
+numpy==1.20.3
+opencv-contrib-python==4.5.2.52
+pillow==8.2.0
 pytz==2020.1
+pyzbar==0.1.8
 six==1.15.0
 sqlalchemy==1.3.18
 werkzeug==1.0.1
