--- a/Pipfile
+++ b/Pipfile
@@ -1,28 +1,32 @@
 [[source]]
-url = "https://pypi.org/simple"
+url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
+[[source]]
+url = "https://pypi.org/simple"
+verify_ssl = true
+
 [packages]
-gunicorn = "*"
 aniso8601 = "==8.0.0"
 click = "==7.1.2"
 flask-restful = "==0.3.8"
 flask-sqlalchemy = "==2.4.3"
-itsdangerous = "==1.1.0"
-pytz = "==2020.1"
-six = "==1.15.0"
-werkzeug = "==1.0.1"
 Flask = "==1.1.2"
+gunicorn = "==20.1.0"
+itsdangerous = "==1.1.0"
 Jinja2 = "==2.11.2"
 MarkupSafe = "==1.1.1"
+numpy = "==1.20.3"
+opencv-contrib-python = "==4.5.2.52"
+Pillow = "==8.2.0"
+pytz = "==2020.1"
+pyzbar = "==0.1.8"
+six = "==1.15.0"
 SQLAlchemy = "==1.3.18"
-opencv-contrib-python = "*"
-pyzbar = "*"
-pillow = "*"
-numpy = "*"
+werkzeug = "==1.0.1"
 
 [dev-packages]
 
 [requires]
-python_version = "3.8"
+python_version = "3.9"
