--- a/Pipfile
+++ b/Pipfile
@@ -3,28 +3,43 @@ url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
-[[source]]
-url = "https://pypi.org/simple"
-verify_ssl = true
-
 [packages]
-aniso8601 = "==8.0.0"
+appdirs = "==1.4.4"
+certifi = "==2020.12.5"
 click = "==7.1.2"
-flask-restful = "==0.3.8"
-flask-sqlalchemy = "==2.4.3"
+distlib = "==0.3.1"
+filelock = "==3.0.12"
 Flask = "==1.1.2"
 gunicorn = "==20.1.0"
 itsdangerous = "==1.1.0"
-Jinja2 = "==2.11.2"
+Jinja2 = "==2.11.3"
 MarkupSafe = "==1.1.1"
-numpy = "==1.20.3"
-opencv-contrib-python = "==4.5.2.52"
-Pillow = "==8.2.0"
-pytz = "==2020.1"
-pyzbar = "==0.1.8"
+pbr = "==5.5.1"
+pipenv = "==2020.11.15"
+pipenv-to-requirements = "==0.9.0"
 six = "==1.15.0"
-SQLAlchemy = "==1.3.18"
+virtualenv = "==20.4.4"
+virtualenv-clone = "==0.5.4"
 werkzeug = "==1.0.1"
+alembic = "==1.6.4"
+aniso8601 = "==8.0.0"
+blinker = "==1.4"
+flask-admin = "==1.5.8"
+flask-login = "==0.5.0"
+Flask-Mail = "==0.9.1"
+flask-marshmallow = "==0.14.0"
+flask-migrate = "==3.0.0"
+flask-restful = "==0.3.8"
+Flask-Script = "==2.0.6"
+flask-sqlalchemy = "==2.4.3"
+Mako = "==1.1.4"
+marshmallow = "==3.12.1"
+marshmallow-sqlalchemy = "==0.25.0"
+python-dateutil = "==2.8.1"
+python-editor = "==1.0.4"
+pytz = "==2020.1"
+SQLAlchemy = "==1.3.18"
+WTForms = "==2.3.3"
 
 [dev-packages]
 
