--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,12 @@
+alembic==1.6.4
+aniso8601==8.0.0
 appdirs==1.4.4
+blinker==1.4
 certifi==2020.12.5
 click==7.1.2
 distlib==0.3.1
 filelock==3.0.12
 Flask==1.1.2
-gunicorn==20.1.0
-itsdangerous==1.1.0
-Jinja2==2.11.3
-MarkupSafe==1.1.1
-pbr==5.5.1
-pipenv==2020.11.15
-pipenv-to-requirements==0.9.0
-six==1.15.0
-virtualenv==20.4.4
-virtualenv-clone==0.5.4
-Werkzeug==1.0.1
-alembic==1.6.4
-aniso8601==8.0.0
-blinker==1.4
-click==7.1.2
- 
 Flask-Admin==1.5.8
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
@@ -28,15 +15,23 @@ Flask-Migrate==3.0.0
 Flask-RESTful==0.3.8
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.3
- 
- 
+gunicorn==20.1.0
+itsdangerous==1.1.0
+Jinja2==2.11.3
 Mako==1.1.4
- 
+MarkupSafe==1.1.1
 marshmallow==3.12.1
 marshmallow-sqlalchemy==0.25.0
+pbr==5.5.1
+pipenv==2020.11.15
+pipenv-to-requirements==0.9.0
+psycopg2-binary==2.9.1
 python-dateutil==2.8.1
 python-editor==1.0.4
 pytz==2020.1
 six==1.15.0
 SQLAlchemy==1.3.18
+virtualenv==20.4.4
+virtualenv-clone==0.5.4
+Werkzeug==1.0.1
 WTForms==2.3.3
