--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ Flask-RESTful==0.3.8
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.3
 gunicorn==20.1.0
+requests==2.25.1
 itsdangerous==1.1.0
 Jinja2==2.11.3
 Mako==1.1.4
