--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 alembic==1.6.4
 aniso8601==8.0.0
 appdirs==1.4.4
+beautifulsoup4==4.10.0
 blinker==1.4
 certifi==2020.12.5
+charset-normalizer==2.0.7
 click==7.1.2
 distlib==0.3.1
 filelock==3.0.12
@@ -16,7 +18,7 @@ Flask-RESTful==0.3.8
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.3
 gunicorn==20.1.0
-requests==2.25.1
+idna==3.3
 itsdangerous==1.1.0
 Jinja2==2.11.3
 Mako==1.1.4
@@ -30,8 +32,11 @@ psycopg2-binary==2.9.1
 python-dateutil==2.8.1
 python-editor==1.0.4
 pytz==2020.1
+requests==2.26.0
 six==1.15.0
+soupsieve==2.3.1
 SQLAlchemy==1.3.18
+urllib3==1.26.7
 virtualenv==20.4.4
 virtualenv-clone==0.5.4
 Werkzeug==1.0.1
